--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="content">
       <header class="top">
         <div class="top__section">
-          <a href="index.html"><img class="logo" src="img/cat-logo.svg" alt="logo"></a>
+          <a href="index.html"><img class="logo" src="img/cat-logo1.svg" alt="logo"></a>
           <input type="checkbox" id="menu__burger" class="menu__checkbox">
           <label for="menu__burger" class="toggle-button">
           </label>
