--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p class="text">Мы - молодая развивающаяся веб-студия. Данные проект создан для получения практического опыта в
           разработке сайтов, а также для наполнения портфолио. Поэтому в настоящее время предлагаем разработку Landing Page
           для Вашей компании по антикризисной цене. </p>
-          <p class="text">Вам понравился наш сайт? Разработка аналогичного сайта для Вас будет стоить всего <span class="cost">6000&nbsp;рублей</span>.</p>
+          <p class="text">Вам понравился наш сайт? Разработка аналогичного сайта для Вас будет стоить <span class="cost">6000&nbsp;рублей</span>.</p>
         <p class="text">Гарантируем ответственный и индивидуальный поход к продвижению Вашего бизнеса.</p>
         <p class="text">Предложение ограничено!</p>
         <svg class="company__arrow" width="61" height="33" viewBox="0 0 61 33" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -92,7 +92,7 @@
                 <li class="services__list">Регистрация доменного имени и хостинга на 1 год. </li>
                 <li class="services__list">Кроме того, мы обязательно учтем Ваши предпочтения по цветовой схеме сайта и пожелания к дизайну.</li>
               </ul>
-              <p class="text services__text">Т.е. всего за <span class="cost">6000&nbsp;рублей</span> Вы получите полностью готовый сайт в интернете, выгодно презентующий Вашу компанию.</p>
+              <p class="text services__text">За <span class="cost">6000&nbsp;рублей</span> Вы получите полностью готовый сайт в интернете, выгодно презентующий Вашу компанию.</p>
           </div>
           <img src="img/STEM-1Degree-Jobs-Tech-Pro-Tech-Jobs-Dice.png" alt="img_large" class="services__img-programmer">
         </div>
